--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -7,8 +7,8 @@
   align-items: center;
   width: 100%;
   max-width: v.$standard-width;
-  padding: 0 var(--spacing-md);
-  margin-bottom: var(--spacing-xl);
+  padding-left: var(--spacing-lg);
+  margin: var(--spacing-sm) 0 var(--spacing-xl) 0;
   @include m.mq(md) {
     margin-bottom: 0;
   }
